--- a/src/components/section/trending.css
+++ b/src/components/section/trending.css
@@ -9,42 +9,31 @@ body {
 }
 
 .trending__box {
-    width: 94%;
+    width: 99%;
     height: 20rem!important;
     background-color: black;
-    margin:0 1rem 0 2rem ;
     color: white;
-    margin-top: 10rem;
+    margin-top: 1rem;
 }
 .trending__box h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
+    margin-left: 2rem;
+    font-weight: 400;
 }
 
-.trending__box .slick-slide>div>.Card {
-    width: 15rem;
-    height: 50%;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-
-
+.trending__box .swiper {
+    width: 100%!important;
+    height: 10rem !important;
 }
-.trending__slider .slick-slide>div:hover {
-    transform: scaleX(1.5);
-    border-radius: 0.5rem;
-    transition: all 0.5s ease-in-out;
-
-}
-.trending__slider  .Card>img {
-    width: 98%;
-    height: 100%;
-    border-radius: 0.5rem;
-}
-.trending__slider  .slick-prev:before,.trending__slider  .slick-next:before  {
-    font-size: 3rem!important;
-}
-
-.trending__slider .slick-prev {
-    left: -43px!important;
-   color: #007aff;
+/* .trending__box .Card {
+    width: 100%!important;
+    height: 15rem !important;
+  
+} */
+.swiper-trending-image {
+    width: 100%!important;
+    height: 100% !important;
+    object-fit: fill;
+    border-radius: 5px;
 }
