--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,17 @@ body {
   height: 100%;
   position: relative;
 }
+.footer__box span {
+  width: 100%;
+  display:flex ;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.2rem;
+}
+.footer__box span p {
+  color: red;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
