--- a/src/components/section/original.css
+++ b/src/components/section/original.css
@@ -9,42 +9,36 @@ body {
 }
 
 .original__box {
-    width: 94%;
-    height: 25rem;
+    width: 99%;
+    height: 30rem;
     background-color: black;
-    margin:0 1rem 0 2rem ;
     color: white;
   
 }
 .original__box h1 {
     font-size: 1.5rem;
     font-weight: 500;
+    margin-left: 2rem;
 }
-.original__slider .slick-slide>div>.Card {
+.original__slider .swiper {
     width: 100%;
     height: 100%;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-
-
 }
-.original__slider .slick-slide>div:hover {
-    transform: scale(1.1);
-    border-radius: 0.5rem;
-    transition: all 0.5s ease-in-out;
 
-}
-.original__slider .Card>img {
-    width: 98%;
+.swiper-image {
     height: 100%;
-    border-radius: 0.5rem;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 5px;
 }
-.original__slider .slick-prev:before,.original__slider .slick-next:before  {
-    font-size: 3rem!important;
+.original__slider .swiper .Card:hover {
+    cursor: pointer;
+    box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2);
+    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.original__slider .slick-prev {
-    left: -43px!important;
-   color: #007aff;
-}
+.swiper-button-next:after, .swiper-button-prev:after {
+    font-size: 3.5rem!important;
+    color: white;
 
+}
