--- a/src/components/section/original.css
+++ b/src/components/section/original.css
@@ -10,7 +10,7 @@ body {
 
 .original__box {
     width: 99%;
-    height: 30rem;
+    height: 32rem;
     background-color: black;
     color: white;
   
@@ -28,9 +28,20 @@ body {
 .swiper-image {
     height: 100%;
     width: 100%;
+    margin-top: 1rem;
     object-fit: contain;
     border-radius: 5px;
+    cursor: pointer;
 }
+.swiper  .Card:hover{
+transform: scale(1.15);
+border-radius: 0.8rem;
+transition: all 0.5s ease-in-out;
+z-index: 99999;
+}
+/* .swiper  .Card:hover.swiper-slide {
+    opacity: 0.2;
+}  */
 .original__slider .swiper .Card:hover {
     cursor: pointer;
     box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2);
@@ -41,4 +52,15 @@ body {
     font-size: 3.5rem!important;
     color: white;
 
+}
+
+.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal {
+    top: 0;
+    height: 2%;
+    display: flex;
+    justify-content: end;
+  
+}
+.swiper-pagination-bullet {
+background-color: white;
 }
