--- a/src/components/section/trending.css
+++ b/src/components/section/trending.css
@@ -24,16 +24,14 @@ body {
 
 .trending__box .swiper {
     width: 100%!important;
-    height: 10rem !important;
+    height: 14rem !important;
 }
-/* .trending__box .Card {
-    width: 100%!important;
-    height: 15rem !important;
-  
-} */
+
 .swiper-trending-image {
+    margin-top: 1rem;
     width: 100%!important;
-    height: 100% !important;
+    height: 99% !important;
     object-fit: fill;
     border-radius: 5px;
+    cursor: pointer;
 }
