--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -54,11 +54,34 @@ body {
     align-items: center;
     gap: 2rem;
     font-size: 1rem;
+    position: relative;
 
 }
+.user_box .input {
+    position: absolute;
+    top:0.7rem;
+    right: 16rem;
+    background-color: #111111;
+    width: 15rem;
+    height: 1.8rem;
+    padding: 0.2rem 1rem 0.2rem 2rem;
+    border-radius: none;
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    border: 0.1rem solid white;
+    transition: width 0.5s;
+
+}
+
+
 .user_box>p:hover,.user_box>.icon:hover{
     cursor: pointer;
     color: #a7a7a7;
     transition: all 0.4s ease-in-out;
 
+}
+.search-icon {
+    transform: translateX(-16.3rem);
+    transition: all 0.8s ease;
 }
