--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -25,6 +25,7 @@ padding: 0!important;
     width: 70%;
     padding-top: 3rem;
     height: 100%;
+    margin-top: 7rem;
     padding-left: 5rem;
     display: flex;
     justify-content: start;
@@ -72,6 +73,10 @@ padding: 0!important;
     color: #fff;
     font-size: 1.1rem;
     font-weight: 300;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    justify-content: center;
 
 }
 .modal_box_btn button:nth-child(2) {
@@ -82,5 +87,9 @@ padding: 0!important;
     height: 2.8rem;
     font-size: 1.1rem;
     font-weight: 300;
+     display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    justify-content: center;
 
 }
